feat: add support for encrypted databases

--- a/google-cloud-spanner/pom.xml
+++ b/google-cloud-spanner/pom.xml
@@ -18,7 +18,6 @@
     <skipUTs>false</skipUTs>
   </properties>
 
-
   <build>
     <plugins>
       <plugin>
@@ -251,6 +250,14 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Needed for testing encrypted databases -->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-kms</artifactId>
+      <version>1.38.1</version>
       <scope>test</scope>
     </dependency>
 
