--- a/google-cloud-spanner/pom.xml
+++ b/google-cloud-spanner/pom.xml
@@ -260,6 +260,12 @@
       <version>1.38.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.api.grpc</groupId>
+      <artifactId>proto-google-cloud-kms-v1</artifactId>
+      <version>0.85.1</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Need testing utility classes for generated gRPC clients tests -->
     <dependency>
